Bug 149074 - Insert bookmark dialog doesn't show existing bookmark names with 'gen'
Summary: Insert bookmark dialog doesn't show existing bookmark names with 'gen'
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Dialog Bookmarks
  Show dependency treegraph
 
Reported: 2022-05-13 14:06 UTC by Miklos Vajna
Modified: 2022-06-15 10:01 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2022-05-13 14:06:01 UTC
Steps to reproduce:

1) Start Writer with 'gen' (i.e. not gtk3)

2) Insert -> bookmark -> observe that name is pre-set to "Bookmark 1"

3) Press Insert to create the bookmark & close the dialog.

4) Open Insert -> bookmark again

Expected: the Name column shows the bookmark name

Actual: the Name column is empty. (The page column shows '1' as expected.)

Note that the same works with gtk3.
Comment 1 Miklos Vajna 2022-05-13 14:07:29 UTC
Caolan: I'm not sure who is at fault here: is this a gen backend problem or rather a bug in how SwInsertBookmarkDlg uses VCL? Thanks.
Comment 2 Aron Budea 2022-05-13 14:20:25 UTC
Regression was introduced by the following commit, bibisected using repo bibisect-linux-64-7.4. Adding CC: to Heiko Tietze.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=ad1da9345b75dbe3ed9c503916c83c38d8a2e22f
author		Heiko Tietze <tietze.heiko@gmail.com>	2021-12-17 09:02:54 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2022-01-31 12:22:49 +0100

Resolves tdf#146261 - Remember size of bookmark dialog
Comment 3 Caolán McNamara 2022-05-13 16:04:09 UTC
The trigger is certainly the dropped set_column_fixed_widths line, so https://gerrit.libreoffice.org/c/core/+/134289 to put that back for now to make it usable again. I'd put the blame on the vcl SvHeaderTabListBox.
Comment 4 Commit Notification 2022-05-13 18:19:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9b1dcd8f591edc6ed1a6db469956985b59badaf5

tdf#149074 SvHeaderTabListBox not handling lack of preset column widths well

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2022-05-16 06:46:08 UTC
Thanks! :-)
Comment 6 Heiko Tietze 2022-05-16 09:51:23 UTC
Back to bug 146261