tdf#149074 SvHeaderTabListBox not handling lack of preset column widths well

Change-Id: Ibd33fe5c5168850eca1bdc7242afc38ed08b5fa2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134289
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>